--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,39 @@
+# This is a basic workflow to help you get started with Actions
+version: 2.1
+name: CI-Workflow
 
+# Controls when the workflow will run
+parameters:
+  deploy_prod:
+    type: boolean
+    default: false
+on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+jobs:
+  build:
+    docker:
+      - image: circleci/python:3.8
+    steps:
+      - checkout
+      - run:
+          name: Run a one-line script
+          command: echo "Hello, world!"
+      - run:
+          name: Run a multi-line script
+          command: |
+            echo "Add other actions to build,"
+            echo "test, and deploy your project."
+
+workflows:
+  version: 2
+  ci:
+    jobs:
+      - build
+      
